--- a/hasura/metadata/databases/default/tables/public_Labs.yaml
+++ b/hasura/metadata/databases/default/tables/public_Labs.yaml
@@ -19,6 +19,26 @@ insert_permissions:
     - street
     - street2
   role: public
+- permission:
+    backend_only: false
+    check: {}
+    columns:
+    - integration
+    - is_active
+    - order
+    - postal_code
+    - provider_number
+    - city
+    - country
+    - email
+    - phone
+    - street
+    - street2
+    - created_at
+    - updated_at
+    - id
+    - name
+  role: user
 select_permissions:
 - permission:
     allow_aggregations: true
@@ -40,6 +60,25 @@ select_permissions:
     - id
     filter: {}
   role: public
+- permission:
+    columns:
+    - integration
+    - is_active
+    - order
+    - postal_code
+    - provider_number
+    - city
+    - country
+    - email
+    - phone
+    - street
+    - street2
+    - created_at
+    - updated_at
+    - id
+    - name
+    filter: {}
+  role: user
 update_permissions:
 - permission:
     check: null
@@ -58,7 +97,30 @@ update_permissions:
     - street2
     filter: {}
   role: public
+- permission:
+    check: null
+    columns:
+    - integration
+    - is_active
+    - order
+    - postal_code
+    - provider_number
+    - city
+    - country
+    - email
+    - phone
+    - street
+    - street2
+    - created_at
+    - updated_at
+    - id
+    - name
+    filter: {}
+  role: user
 delete_permissions:
 - permission:
     filter: {}
   role: public
+- permission:
+    filter: {}
+  role: user
