--- a/hasura/metadata/databases/default/tables/public_application_notifications.yaml
+++ b/hasura/metadata/databases/default/tables/public_application_notifications.yaml
@@ -15,6 +15,15 @@ insert_permissions:
     - enabled
     - notification_type
   role: public
+- permission:
+    backend_only: false
+    check: {}
+    columns:
+    - id
+    - user
+    - enabled
+    - notification_type
+  role: user
 select_permissions:
 - permission:
     allow_aggregations: true
@@ -25,6 +34,15 @@ select_permissions:
     - notification_type
     filter: {}
   role: public
+- permission:
+    allow_aggregations: true
+    columns:
+    - enabled
+    - user
+    - id
+    - notification_type
+    filter: {}
+  role: user
 update_permissions:
 - permission:
     check: {}
@@ -35,7 +53,19 @@ update_permissions:
     - notification_type
     filter: {}
   role: public
+- permission:
+    check: {}
+    columns:
+    - enabled
+    - user
+    - id
+    - notification_type
+    filter: {}
+  role: user
 delete_permissions:
 - permission:
     filter: {}
   role: public
+- permission:
+    filter: {}
+  role: user
