--- a/hasura/metadata/databases/default/tables/public_notification_toggle.yaml
+++ b/hasura/metadata/databases/default/tables/public_notification_toggle.yaml
@@ -16,6 +16,16 @@ insert_permissions:
     - notification_type
     - enabled
   role: public
+- permission:
+    backend_only: false
+    check: {}
+    columns:
+    - id
+    - user
+    - company
+    - notification_type
+    - enabled
+  role: user
 select_permissions:
 - permission:
     allow_aggregations: true
@@ -27,6 +37,16 @@ select_permissions:
     - notification_type
     filter: {}
   role: public
+- permission:
+    allow_aggregations: true
+    columns:
+    - enabled
+    - company
+    - user
+    - id
+    - notification_type
+    filter: {}
+  role: user
 update_permissions:
 - permission:
     check: {}
@@ -38,7 +58,20 @@ update_permissions:
     - notification_type
     filter: {}
   role: public
+- permission:
+    check: {}
+    columns:
+    - enabled
+    - company
+    - user
+    - id
+    - notification_type
+    filter: {}
+  role: user
 delete_permissions:
 - permission:
     filter: {}
   role: public
+- permission:
+    filter: {}
+  role: user
