--- a/package.json
+++ b/package.json
@@ -72,7 +72,8 @@
     "**/ssri": "8.0.1",
     "**/hosted-git-info": "3.0.8",
     "**/lodash": ">=4.17.21",
-    "**/underscore": ">=1.12.1"
+    "**/underscore": ">=1.12.1",
+    "**/postcss": ">=8.2.10"
   },
   "dependencies": {
     "@anchan828/nest-sendgrid": "0.4.17",
