--- a/package.json
+++ b/package.json
@@ -73,7 +73,7 @@
     "**/hosted-git-info": "3.0.8",
     "**/lodash": ">=4.17.21",
     "**/underscore": ">=1.12.1",
-    "**/postcss": ">=8.2.10"
+    "**/trim": ">=0.0.3"
   },
   "dependencies": {
     "@anchan828/nest-sendgrid": "0.4.17",
