[skip ci] fix slack bot for prod

--- a/bitbucket-pipelines.yml
+++ b/bitbucket-pipelines.yml
@@ -173,7 +173,7 @@ pipelines:
                 - yarn install --frozen-lockfile --prefer-offline
                 - apt-get update -y && apt-get install -y curl jq time
                 - yarn affected --base=HEAD~1 --target=deploy-docker --prod
-                - cp -f /tmp/bot_message.txt dist/ || true
+                - mkdir -p dist && cp -f /tmp/bot_message.txt dist/ || true
               artifacts:
                 - dist/bot_message.txt
 
@@ -212,7 +212,7 @@ pipelines:
                   printf "*New Version Staged for Production*\n## v${PACKAGE_JSON_VERSION}\n${LAST_COMMIT_LOG}\n\n" > /tmp/bot_message2.txt
                 - cat /tmp/bot_message.txt >> /tmp/bot_message2.txt
                 - cat /tmp/bot_message2.txt
-                - cp -f /tmp/bot_message2.txt dist/ || true
+                - mkdir -p dist && cp -f /tmp/bot_message2.txt dist/ || true
 
               artifacts:
                 - dist/bot_message2.txt
