--- a/package.json
+++ b/package.json
@@ -72,8 +72,7 @@
     "**/ssri": "8.0.1",
     "**/hosted-git-info": "3.0.8",
     "**/lodash": ">=4.17.21",
-    "**/underscore": ">=1.12.1",
-    "**/trim": ">=0.0.3"
+    "**/underscore": ">=1.12.1"
   },
   "dependencies": {
     "@anchan828/nest-sendgrid": "0.4.19",
