--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "pabau",
-  "version": "2.0.308",
+  "version": "2.0.318",
   "private": true,
   "license": "Copyright Hambrand Technologies Ltd",
   "workspaces": {
@@ -13,32 +13,38 @@
   },
   "scripts": {
     "nx": "cross-env NODE_OPTIONS='--max-old-space-size=4096' nx",
+    "serve": "nx serve",
     "vercel": "vercel",
     "apollo": "npx apollo",
+    "build:bridge-api": "nx export bridge-api",
     "hasura:cli": "env-cmd -f ./hasura/.env hasura --project hasura",
     "nest": "cd apps/backend && nest",
     "clean": "rimraf **/node_modules",
     "web:start": "nx serve web",
     "start:linux": "yarn dev:linux",
     "start:windows": "yarn dev:windows",
-    "dev:linux": "concurrently --kill-others-on-fail -n HASURA,PRISMA,WEB,WEB-PRELOADER,LAUNCH-BROWSER -c red,green,blue,grey,grey \"delay 5 && yarn hasura:stop && docker-compose -f hasura/docker-compose.linux.yml up -d postgres && wait-on -w 12000 http-get://localhost:4000 && yarn hasura:start:linux\" \"yarn bridge:start\" \"delay 25 && yarn web:start\" \"delay 15 && wait-on tcp:4000 && wait-on http://localhost:4200\" \"delay 20 && wait-on http://localhost:4200 && wait-on http-get://localhost:8080/console && open-cli 'http://localhost:4200'\"",
-    "dev:windows": "concurrently --kill-others-on-fail -n HASURA,PRISMA,WEB,WEB-PRELOADER,LAUNCH-BROWSER -c red,green,blue,grey,grey \"delay 5 && docker-compose -f hasura/docker-compose.windows.yml up -d postgres && wait-on -w 12000 http-get://localhost:4000 && yarn hasura:start:windows\" \"yarn bridge:start\" \"delay 25 && yarn web:start\" \"delay 15 && wait-on tcp:4000 && wait-on http://localhost:4200\" \"delay 20 && wait-on http://localhost:4200 && wait-on http-get://localhost:8080/console && open-cli 'http://localhost:4200'\"",
+    "dev": "concurrently -m 16 --kill-others-on-fail -n HASURA,HASURA-SEED,PRISMA,WEB,WEB-PRELOADER,LAUNCH-BROWSER -c red,red,green,blue,grey,grey \"delay 5 && yarn hasura:stop && docker-compose -f hasura/docker-compose.yml up -d postgres && wait-on -w 1200 http-get://localhost:4000 && yarn hasura:start\" \"delay 22 && wait-on -w 1200 http-get://localhost:8080/console && (yarn hasura:cli seeds apply --database-name default || echo 'Seed apply failed') && open-cli 'http://localhost:8080' && wait-on http://localhost:4200 && open-cli 'http://localhost:4200'\" \"yarn bridge:start\" \"delay 25 && yarn web:start\" \"delay 15 && wait-on tcp:4000 && wait-on http://localhost:4200\" \"delay 20 && wait-on http://localhost:4200\"",
+    "dev:windows": "echo DEPRICATED - Just call 'dev' from now && yarn dev",
+    "dev:linux": "echo DEPRICATED - Just call 'dev' from now && yarn dev",
     "bridge:start": "nx serve bridge-api --prod",
+    "hasura:start": "run-script-os",
+    "hasura:start:default": "docker-compose -f hasura/docker-compose.yml up -d postgres && delay 10 && docker-compose -f hasura/docker-compose.yml up --force-recreate graphql-engine",
     "hasura:start:linux": "docker-compose -f hasura/docker-compose.linux.yml up -d postgres && delay 10 && docker-compose -f hasura/docker-compose.linux.yml up --force-recreate graphql-engine",
-    "hasura:start:windows": "docker-compose -f hasura/docker-compose.windows.yml up -d postgres && delay 10 && docker-compose -f hasura/docker-compose.windows.yml up --force-recreate graphql-engine",
-    "hasura:stop": "docker-compose -f hasura/docker-compose.linux.yml down -t 5",
-    "hasura:clean": "docker-compose -f hasura/docker-compose.linux.yml down -v",
-    "hasura:export": "yarn hasura:cli metadata export && yarn apollo client:download-schema remote-schema.graphql && yarn apollo client:download-schema graphql.schema.json",
+    "hasura:stop": "docker-compose -f hasura/docker-compose.yml down -t 5",
+    "hasura:clean": "docker-compose -f hasura/docker-compose.yml down -v",
+    "hasura:export": "yarn hasura:cli metadata export && yarn apollo client:download-schema hasura/schema.graphql",
+    "graphql-codegen": "graphql-codegen",
     "production:start": "nx affected --uncommitted=true --target=export && npx serve dist/apps/web/exported",
     "build": "pwd && ls -al && rm -rf public/ && nx build backend --no-cache && cp -rf dist/apps/backend/ public/ && cp apps/backend/vercel.json public/ && cp package.json public/",
-    "pipeline-checks": "yarn --pure-lockfile --prefer-offline && yarn lint:tsc && yarn nx affected --all --target=lint && yarn nx affected --all --target=test && yarn nx affected --all --target=build",
-    "pipeline-checks:parallel": "yarn --pure-lockfile --prefer-offline && concurrently --max-processes=5 --kill-others-on-fail -n TSC,LS-LINT,LINT,TEST,BUILD,E2E \"yarn lint:tsc\" \"yarn ls-lint || true\" \"yarn nx affected --all --target=lint\" \"yarn nx affected --all --target=test\" \"yarn nx affected --all --target=build\"",
-    "pipeline-checks:insane": "yarn --pure-lockfile --prefer-offline && concurrently --max-processes=6 -n TSC,LS-LINT,LINT,TEST,BUILD,E2E \"yarn lint:tsc\" \"yarn ls-lint || true\" \"yarn nx affected --all --target=lint\" \"yarn nx affected --all --target=test\" \"yarn nx affected --all --target=build\"",
-    "lint:tsc": "concurrently --max-processes=5 \"tsc --noEmit -p apps/backend/\" \"tsc --noEmit -p apps/connect/\" \"tsc --noEmit -p apps/connect-e2e/\" \"tsc --noEmit -p apps/mgmt/\" \"tsc --noEmit -p apps/mgmt-e2e/\" \"tsc --noEmit -p apps/ui-e2e/\" \"tsc --noEmit -p apps/web/\" \"tsc --noEmit -p apps/web-e2e/\" \"tsc --noEmit -p libs/ui/tsconfig.lib.json\" \"tsc --noEmit -p libs/yup/tsconfig.lib.json\"",
+    "pipeline-checks": "yarn --pure-lockfile --prefer-offline && yarn lint:tsc && yarn lint:workspace && yarn nx affected --all --target=lint --parallel && yarn nx affected --all --target=test --parallel",
+    "pipeline-checks:slow": "yarn --pure-lockfile --prefer-offline && yarn lint:tsc && yarn lint:workspace && yarn nx affected --all --target=lint && yarn nx affected --all --target=test && yarn nx affected --all --target=build",
+    "pipeline-checks:parallel": "yarn --pure-lockfile --prefer-offline && concurrently --max-processes=3 --kill-others-on-fail -n TSC,NX,LS-LINT,LINT,TEST,BUILD,E2E \"yarn lint:tsc\" \"yarn lint:workspace\" \"yarn ls-lint || echo TODO\" \"yarn nx affected --all --target=lint --parallel\" \"yarn nx affected --all --target=test --parallel\"",
+    "pipeline-checks:insane": "yarn --pure-lockfile --prefer-offline && concurrently --max-processes=4 -n TSC,NX,LS-LINT,LINT,TEST,BUILD,E2E \"yarn lint:tsc\" \"yarn lint:workspace\" \"yarn ls-lint || echo TODO\" \"yarn nx affected --all --target=lint --parallel\" \"yarn nx affected --all --target=test --parallel\" \"yarn nx affected --all --target=build --parallel\"",
+    "lint:tsc": "nx affected --target=tsc --parallel",
     "lint:ls": "ls-lint",
     "lint:workspace": "nx workspace-lint",
     "test": "nx test",
-    "lint": "nx workspace-lint && nx lint",
+    "lint": "concurrently --kill-others-on-fail -n NX,TSC,ESLINT \"yarn lint:workspace\" \"yarn lint:tsc\" \"nx affected:lint --parallel\"",
     "e2e": "nx e2e",
     "affected:apps": "nx affected:apps",
     "affected:libs": "nx affected:libs",
@@ -63,15 +69,18 @@
   "resolutions": {
     "**/immer": "8.0.1",
     "**/prismjs": "1.23.0",
-    "**/ssri": "8.0.1"
+    "**/ssri": "8.0.1",
+    "**/hosted-git-info": "3.0.8",
+    "**/lodash": ">=4.17.21",
+    "**/underscore": ">=1.12.1"
   },
   "dependencies": {
-    "@anchan828/nest-sendgrid": "0.4.17",
+    "@anchan828/nest-sendgrid": "0.4.19",
     "@ant-design/icons": "4.6.2",
-    "@apollo/client": "3.3.15",
+    "@apollo/client": "3.3.16",
     "@babel/plugin-transform-object-assign": "7.12.13",
     "@babel/plugin-transform-react-jsx-source": "7.12.13",
-    "@babel/runtime": "7.13.17",
+    "@babel/runtime": "7.14.0",
     "@fortawesome/fontawesome-svg-core": "1.2.35",
     "@fortawesome/free-solid-svg-icons": "5.15.3",
     "@fortawesome/react-fontawesome": "0.1.14",
@@ -79,12 +88,11 @@
     "@nestjs/config": "0.6.3",
     "@nestjs/core": "7.6.15",
     "@nestjs/platform-express": "7.6.15",
-    "@next/eslint-plugin-next": "^10.1.3",
-    "@paljs/cli": "3.0.8",
-    "@paljs/nexus": "3.0.1",
-    "@prisma/client": "2.21.2",
+    "@paljs/cli": "3.1.2",
+    "@paljs/nexus": "3.0.11",
+    "@prisma/client": "2.22.1",
     "antd": "https://github.com/binary64/ant-design/releases/download/master/antd-4.10.3.tgz",
-    "apollo-server": "2.23.0",
+    "apollo-server": "2.24.0",
     "canvas-confetti": "1.4.0",
     "class-validator": "0.13.1",
     "classnames": "2.3.1",
@@ -94,14 +102,14 @@
     "document-register-element": "1.14.10",
     "env-cmd": "10.1.0",
     "eslint-plugin-tsdoc": "^0.2.14",
-    "eslint-plugin-unicorn": "30.0.0",
+    "eslint-plugin-unicorn": "31.0.0",
     "file-loader": "6.2.0",
     "formik": "2.2.6",
     "formik-antd": "2.0.1",
     "google-libphonenumber": "3.2.19",
     "graphql": "^15.5.0",
-    "graphql-middleware": "6.0.7",
-    "graphql-scalars": "1.9.1",
+    "graphql-middleware": "6.0.10",
+    "graphql-scalars": "1.9.3",
     "highcharts": "9.0.1",
     "highcharts-react-official": "3.0.0",
     "html-to-image": "1.6.1",
@@ -197,47 +205,47 @@
     "@nrwl/workspace": "12.0.8",
     "@react-native-community/cli-platform-android": "4.13.0",
     "@react-native-community/cli-platform-ios": "4.13.0",
-    "@storybook/addon-a11y": "6.1.21",
-    "@storybook/addon-essentials": "6.1.21",
-    "@storybook/addon-storysource": "6.1.21",
-    "@storybook/react": "6.1.21",
+    "@storybook/addon-a11y": "6.2.9",
+    "@storybook/addon-essentials": "6.2.9",
+    "@storybook/addon-storysource": "6.2.9",
+    "@storybook/react": "6.2.9",
     "@testing-library/jest-native": "4.0.1",
-    "@testing-library/react": "11.2.5",
+    "@testing-library/react": "11.2.6",
     "@testing-library/react-native": "7.2.0",
-    "@types/classnames": "2.2.11",
+    "@types/classnames": "2.3.1",
     "@types/cookie-session": "2.0.42",
-    "@types/jest": "^26.0.22",
+    "@types/jest": "^26.0.23",
     "@types/jsonwebtoken": "8.5.1",
-    "@types/node": "14.14.41",
+    "@types/node": "15.0.2",
     "@types/pluralize": "0.0.29",
-    "@types/react": "17.0.3",
+    "@types/react": "17.0.5",
     "@types/react-custom-scrollbars": "4.0.7",
-    "@types/react-dom": "17.0.2",
+    "@types/react-dom": "17.0.4",
     "@types/react-grid-layout": "1.1.1",
-    "@types/react-native": "0.63.51",
-    "@types/webpack": "4.41.26",
-    "@typescript-eslint/eslint-plugin": "4.22.0",
-    "@typescript-eslint/parser": "4.22.0",
+    "@types/react-native": "0.64.5",
+    "@types/webpack": "5.28.0",
+    "@typescript-eslint/eslint-plugin": "4.23.0",
+    "@typescript-eslint/parser": "4.23.0",
     "@vercel/node": "1.10.0",
-    "apollo-server-testing": "2.23.0",
+    "apollo-server-testing": "2.24.0",
     "babel-jest": "26.6.3",
     "babel-loader": "8.2.2",
     "bitbucket": "2.6.1",
-    "concurrently": "5.3.0",
-    "cypress": "6.8.0",
-    "dotenv": "8.2.0",
-    "eslint": "7.25.0",
-    "eslint-config-canonical": "26.2.2",
-    "eslint-config-prettier": "7.2.0",
-    "eslint-plugin-cypress": "2.11.2",
+    "concurrently": "6.1.0",
+    "cypress": "^6",
+    "dotenv": "9.0.2",
+    "eslint": "7.26.0",
+    "eslint-config-canonical": "26.2.3",
+    "eslint-config-prettier": "8.3.0",
+    "eslint-plugin-cypress": "2.11.3",
     "eslint-plugin-graphql": "4.0.0",
     "eslint-plugin-import": "2.22.1",
     "eslint-plugin-json-format": "^2.0.1",
     "eslint-plugin-jsx-a11y": "6.4.1",
-    "eslint-plugin-prettier": "3.3.1",
+    "eslint-plugin-prettier": "3.4.0",
     "eslint-plugin-react": "7.23.2",
     "eslint-plugin-react-hooks": "4.2.0",
-    "eslint-plugin-sonarjs": "0.6.0",
+    "eslint-plugin-sonarjs": "0.7.0",
     "eslint-plugin-tsdoc": "^0.2.14",
     "eslint-plugin-you-dont-need-lodash-underscore": "6.11.0",
     "graphql-shield": "7.5.0",
@@ -246,14 +254,16 @@
     "jest-react-native": "18.0.0",
     "lint-staged": "^11.0.0",
     "metro-react-native-babel-preset": "0.65.2",
+    "micromatch": "^4.0.4",
     "next-page-tester": "0.24.1",
     "prettier": "2.2.1",
     "prisma": "2.21.2",
-    "prisma-json-schema-generator": "1.2.1",
+    "prisma-json-schema-generator": "1.2.2",
     "react-cookie": "4.0.3",
     "react-docgen-typescript": "1.22.0",
-    "react-test-renderer": "17.0.1",
-    "ts-jest": "26.5.5",
+    "react-test-renderer": "17.0.2",
+    "run-script-os": "^1.1.6",
+    "ts-jest": "26.5.6",
     "ts-node": "9.1.1",
     "tslint": "6.1.3",
     "typescript": "4.2.4",
