--- a/bitbucket-pipelines.yml
+++ b/bitbucket-pipelines.yml
@@ -97,7 +97,7 @@ pipelines:
                 - node
               script:
                 - yarn bin || true
-                - CYPRESS_SKIP_BINARY_INSTALL=1 yarn --verbose install --frozen-lockfile --prefer-offline
+                - NODE_OPTIONS=--max_old_space_size=3333 CYPRESS_CACHE_FOLDER=./dist/cypress CYPRESS_SKIP_BINARY_INSTALL=1 yarn install --ignore-scripts --frozen-lockfile --prefer-offline
                 - yarn bin || true
                 - yarn lint:tsc
                 - yarn lint:ls || true
@@ -109,7 +109,7 @@ pipelines:
               caches:
                 - node
               script:
-                - CYPRESS_CACHE_FOLDER=./dist/cypress CYPRESS_SKIP_BINARY_INSTALL=1 yarn install --ignore-scripts
+                - NODE_OPTIONS=--max_old_space_size=3333 CYPRESS_CACHE_FOLDER=./dist/cypress CYPRESS_SKIP_BINARY_INSTALL=1 yarn install --ignore-scripts --frozen-lockfile --prefer-offline
                 - NODE_OPTIONS=--max_old_space_size=3333 yarn affected:lint --base=HEAD~1 --with-deps --parallel --maxParallel=2
 
           - step:
@@ -118,7 +118,7 @@ pipelines:
               caches:
                 - node
               script:
-                - yarn install --frozen-lockfile --prefer-offline
+                - NODE_OPTIONS=--max_old_space_size=3333 CYPRESS_CACHE_FOLDER=./dist/cypress CYPRESS_SKIP_BINARY_INSTALL=1 yarn install --ignore-scripts --frozen-lockfile --prefer-offline
                 - NODE_OPTIONS=--max_old_space_size=3333 yarn affected:test --base=HEAD~1 --skip-nx-cache
           #              - NODE_OPTIONS=--max_old_space_size=3333 yarn affected:test --base=HEAD~1 --parallel --maxParallel=1 --skip-nx-cache
           #              - NODE_OPTIONS=--max_old_space_size=2222 yarn affected:test --base=HEAD~1 --parallel --maxParallel=2 --skip-nx-cache
@@ -131,7 +131,7 @@ pipelines:
               caches:
                 - node
               script:
-                - yarn install --frozen-lockfile --prefer-offline
+                - NODE_OPTIONS=--max_old_space_size=3333 CYPRESS_CACHE_FOLDER=./dist/cypress CYPRESS_SKIP_BINARY_INSTALL=1 yarn install --ignore-scripts --frozen-lockfile --prefer-offline
                 - NODE_OPTIONS=--max_old_space_size=2345 yarn affected:export --base=HEAD~1 --prod
               artifacts:
                 - dist/**
@@ -170,7 +170,7 @@ pipelines:
               caches:
                 - node
               script:
-                - yarn install --frozen-lockfile --prefer-offline
+                - NODE_OPTIONS=--max_old_space_size=3333 CYPRESS_CACHE_FOLDER=./dist/cypress CYPRESS_SKIP_BINARY_INSTALL=1 yarn install --ignore-scripts --frozen-lockfile --prefer-offline
                 - apt-get update -y && apt-get install -y curl jq time
                 - yarn affected --base=HEAD~1 --target=deploy-docker --prod
                 - mkdir -p dist && cp -f /tmp/bot_message.txt dist/ || true
@@ -185,7 +185,7 @@ pipelines:
               caches:
                 - node
               script:
-                - yarn install --frozen-lockfile --prefer-offline
+                - NODE_OPTIONS=--max_old_space_size=3333 CYPRESS_CACHE_FOLDER=./dist/cypress CYPRESS_SKIP_BINARY_INSTALL=1 yarn install --ignore-scripts --frozen-lockfile --prefer-offline
                 - ls -al dist || true
                 - ls -al dist/apps || true
                 - cat /tmp/bot_message.txt || true
