--- a/bitbucket-pipelines.yml
+++ b/bitbucket-pipelines.yml
@@ -119,6 +119,7 @@ pipelines:
                 - node
               script:
                 - NODE_OPTIONS=--max_old_space_size=3333 CYPRESS_CACHE_FOLDER=./dist/cypress CYPRESS_SKIP_BINARY_INSTALL=1 yarn install --ignore-scripts --frozen-lockfile --prefer-offline
+                - NODE_OPTIONS=--max_old_space_size=3333 yarn prisma generate
                 - NODE_OPTIONS=--max_old_space_size=3333 yarn affected:test --base=HEAD~1 --skip-nx-cache
           #              - NODE_OPTIONS=--max_old_space_size=3333 yarn affected:test --base=HEAD~1 --parallel --maxParallel=1 --skip-nx-cache
           #              - NODE_OPTIONS=--max_old_space_size=2222 yarn affected:test --base=HEAD~1 --parallel --maxParallel=2 --skip-nx-cache
@@ -132,7 +133,8 @@ pipelines:
                 - node
               script:
                 - NODE_OPTIONS=--max_old_space_size=3333 CYPRESS_CACHE_FOLDER=./dist/cypress CYPRESS_SKIP_BINARY_INSTALL=1 yarn install --ignore-scripts --frozen-lockfile --prefer-offline
-                - NODE_OPTIONS=--max_old_space_size=2345 yarn affected:export --base=HEAD~1 --prod
+                - NODE_OPTIONS=--max_old_space_size=3333 yarn prisma generate
+                - NODE_OPTIONS=--max_old_space_size=3333 yarn affected:export --base=HEAD~1 --prod
               artifacts:
                 - dist/**
 
