CI: prisma generate for build steps

--- a/bitbucket-pipelines.yml
+++ b/bitbucket-pipelines.yml
@@ -74,6 +74,7 @@ pipelines:
                 - 'self.hosted'
               max-time: 30
               script:
+                - yarn prisma generate
                 - NODE_OPTIONS=--max_old_space_size=3333 yarn affected:export --base=origin/master --prod
               artifacts:
                 - dist/**
@@ -217,6 +218,7 @@ pipelines:
                 - 'self.hosted'
               max-time: 30
               script:
+                - yarn prisma generate
                 - NODE_OPTIONS=--max_old_space_size=3333 yarn affected:export --base=HEAD~1 --prod
               artifacts:
                 - dist/**
