--- a/package.json
+++ b/package.json
@@ -100,7 +100,6 @@
     "cookie-session": "1.4.0",
     "cross-env": "^7.0.3",
     "delay-cli": "1.1.0",
-    "document-register-element": "1.14.10",
     "env-cmd": "10.1.0",
     "eslint-plugin-tsdoc": "^0.2.14",
     "eslint-plugin-unicorn": "31.0.0",
@@ -213,7 +212,6 @@
     "@testing-library/jest-native": "4.0.1",
     "@testing-library/react": "11.2.6",
     "@testing-library/react-native": "7.2.0",
-    "@types/classnames": "2.3.1",
     "@types/cookie-session": "2.0.42",
     "@types/jest": "^26.0.23",
     "@types/jsonwebtoken": "8.5.1",
@@ -258,15 +256,15 @@
     "micromatch": "^4.0.4",
     "next-page-tester": "0.24.1",
     "prettier": "2.2.1",
-    "prisma": "2.20",
+    "prisma": "2.22.1",
     "prisma-json-schema-generator": "1.2.2",
     "react-cookie": "4.0.3",
     "react-docgen-typescript": "1.22.0",
     "react-test-renderer": "17.0.2",
+    "rimraf": "^3.0.2",
     "run-script-os": "^1.1.6",
     "ts-jest": "26.5.6",
     "ts-node": "9.1.1",
-    "tslint": "6.1.3",
     "typescript": "4.2.4",
     "vercel": "22.0.1",
     "yaml-loader": "0.6.0"
