--- a/hasura/metadata/databases/default/tables/public_product_news.yaml
+++ b/hasura/metadata/databases/default/tables/public_product_news.yaml
@@ -1,65 +1,81 @@
 table:
-  name: user_list
+  name: product_news
   schema: public
+array_relationships:
+- name: readBy
+  using:
+    manual_configuration:
+      column_mapping:
+        id: product_news
+      insertion_order: null
+      remote_table:
+        name: product_news_read
+        schema: public
 insert_permissions:
 - permission:
     backend_only: false
     check: {}
     columns:
-    - admin
-    - company
-    - first_name
+    - description
+    - link
+    - title
+    - img
+    - created_at
     - id
-    - last_name
   role: public
 - permission:
     backend_only: false
     check: {}
     columns:
+    - created_at
+    - description
     - id
-    - company
-    - admin
-    - first_name
-    - last_name
+    - link
+    - title
+    - img
   role: user
 select_permissions:
 - permission:
     columns:
-    - admin
-    - company
-    - first_name
+    - description
+    - link
+    - title
+    - img
+    - created_at
     - id
-    - last_name
     filter: {}
   role: public
 - permission:
     columns:
-    - admin
-    - company
+    - description
+    - link
+    - title
+    - img
+    - created_at
     - id
-    - first_name
-    - last_name
     filter: {}
   role: user
 update_permissions:
 - permission:
     check: null
     columns:
+    - description
+    - link
+    - title
+    - img
+    - created_at
     - id
-    - company
-    - admin
-    - first_name
-    - last_name
     filter: {}
   role: public
 - permission:
     check: null
     columns:
-    - admin
-    - company
+    - description
+    - link
+    - title
+    - img
+    - created_at
     - id
-    - first_name
-    - last_name
     filter: {}
   role: user
 delete_permissions:
